add(HttpUtil)1.change Url generate